--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.7",
     "@tanstack/react-query": "^5.0.0-rc.2",
     "axios": "^1.5.1",
     "infinite-react-carousel": "^1.2.11",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
@@ -24,5 +27,6 @@
     "eslint": "^8.50.0",
     "eslint-plugin-react": "^7.33.2",
     "vite": "^4.0.0"
-  }
+  },
+  "proxy": "http://localhost:8000/api"
 }
