--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "stripe": "^13.8.0"
   },
   "name": "api",
   "version": "1.0.0",
